# gxfpmoc

./: .gitignore  CMakeLists.txt  LICENSE  PSK.md  README.md  shell.nix
demos/capture/: main.c
demos/psk_tool/: main.c
demos/recovery/: main.c
include/gxfp/algo/: common.h  sensor_cfg.h
include/gxfp/algo/image/: decoder.h  fpn.h  plain.h
include/gxfp/algo/payload/: provision.h
include/gxfp/cmd/: device_recovery_cmd.h  fdt_cmd.h  goodix_xfer.h  mcu_state_cmd.h  production_cmd.h  register_cmd.h  sensor_cfg_cmd.h  tls_cmd.h
include/gxfp/flow/: device_recovery.h  fdt.h  session.h
include/gxfp/io/: dev.h  uapi.h
include/gxfp/proto/: goodix_cmd.h  goodix_constants.h  goodix_proto.h
include/gxfp/tls/: tls_constants.h  tls_service.h
include/uapi/linux/: gxfp_ioctl.h
src/algo/: common.c  sensor_cfg.c
src/algo/image/: decoder.c  fpn.c  plain.c
src/algo/payload/: provision.c
src/cmd/: device_recovery_cmd.c  fdt_cmd.c  goodix_xfer.c  mcu_state_cmd.c  production_cmd.c  register_cmd.c  sensor_cfg_cmd.c  tls_cmd.c
src/flow/: device_recovery.c  fdt.c  session.c  session_internal.h
src/io/: dev.c
src/proto/: goodix_proto.c
src/tls/: tls_engine.h  tls_engine_mbedtls.c  tls_service.c
tools/: unseal_bb010002.py
